@@ -1,7 +1,9 @@
 AUX e2fsprogs-libs-1.41.1-darwin-makefile.patch 3415 RMD160 0628edad82fd293634e666db71a4984fc79f3012 SHA1 4aeb96efdbc94800165c1357e0e647bd338e0c88 SHA256 d702fc1c9f047dc23553277c3afb3851db3f062a4cbc5460b87502cbe34aa07f
 DIST e2fsprogs-libs-1.41.3.tar.gz 489551 RMD160 73ec32fd8ed9869f5b1350cf85adcc51cc15c0dd SHA1 c1c24e9059a34a6f40b92902211d12bab8c39763 SHA256 38b8163595da62f740b62bf4e77bbe5429cd78303f5fbdc260122d25d3a3300c
 DIST e2fsprogs-libs-1.41.4.tar.gz 493241 RMD160 46b6d0e9fde00abf84fa3fafe909fc78bc4d87fd SHA1 0094812d0df9b1a138ea9eeab16b523397ef2c9d SHA256 c88f3400f9ed90c353363610df43d76a7a6d801d3df4897935ad1b396d9cab6f
-EBUILD e2fsprogs-libs-1.41.3-r1.ebuild 1826 RMD160 ad2d26ca52a1397f8f6cca52e3cf0db6f1522cca SHA1 e9e89223b44017ec4971e96a2b996353ffd8e470 SHA256 4edad4d7812e8c971e2c0b668f94ac3b60c90e50fc6ffe49d98682a8ef3b5904
+DIST e2fsprogs-libs-1.41.5.tar.gz 493800 RMD160 9be406e43359db58423dedf08f5df6fcfd8e3f5e SHA1 c9db02f0f01f72bfa13dc14897e3a6583d157e6b SHA256 dc1eb1b7bbad2edc030e50e7506c79562d98098f99a5d6cb5db5aa5ca92ffe48
+EBUILD e2fsprogs-libs-1.41.3-r1.ebuild 1828 RMD160 0dcab34fcc40764c011d6e45b3851e79b68090e3 SHA1 db39ba23ea1f51f51cf199b0ddd72b182455bafb SHA256 50bae532933ebe98b861ec63310a6997ba3425bee53bb88f216ff3cfa57960c7
 EBUILD e2fsprogs-libs-1.41.4.ebuild 1793 RMD160 49e0f5c9256079df3ce183fb2eabc15225409974 SHA1 8bbc812bd85035d541e8d6c4f009f80bb37dff48 SHA256 0f028c1e11487a631cbc69dcb73686a3ac3fa0fa5efc719b75879e53afe1add3
-MISC ChangeLog 3214 RMD160 3e89041bf2fda57cfcc968c19693ae697766f0c4 SHA1 83731f46235e9807facdb7552b8f5083cb32973c SHA256 99bfd7ed45351b0237f935a58a4966c94ab97f5f9ec107c2f2b5007a9952c899
+EBUILD e2fsprogs-libs-1.41.5.ebuild 1579 RMD160 ff237ee22228302b2a2ef46b6791cf9dca13403f SHA1 609bda9255c3e87b68b5a1809d80ad6ac11ddd0b SHA256 ddef9b269985d898d266e1e731a54b5bfe737c0a3d1f2610a51e06f12e2cd15e
+MISC ChangeLog 3376 RMD160 2fb393b3461b2753310632fb8965fe70392c5bc3 SHA1 14b9c92595a11f41cde731bd083cd1a96fc43e46 SHA256 83029f1268a9cee1a4611f90a309b554850677ea3ce8267b9263c5732154c013
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
