@@ -1,8 +1,8 @@
-# Copyright 1999-2008 Gentoo Foundation
+# Copyright 1999-2009 Gentoo Foundation
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/e2fsprogs-libs-1.41.3-r1.ebuild,v 1.2 2009/05/29 23:26:18 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/e2fsprogs-libs-1.41.5.ebuild,v 1.1 2009/05/29 23:26:49 vapier Exp $
 
-EAPI="2"
+EAPI=2
 
 inherit flag-o-matic toolchain-funcs
 
@@ -15,20 +15,21 @@ SLOT="0"
 KEYWORDS="~amd64-linux ~x86-linux ~ppc-macos"
 IUSE="nls"
 
-RDEPEND="!sys-libs/com_err
+RDEPEND="elibc_glibc? ( !prefix? ( >=sys-libs/glibc-2.6 ) )
+	!sys-libs/com_err
 	!sys-libs/ss
 	!<sys-fs/e2fsprogs-1.41"
 DEPEND="nls? ( sys-devel/gettext )
 	sys-devel/bc"
 
 src_prepare() {
+	# stupid configure script clobbers CC for us
+	sed -i '/if test -z "$CC" ; then CC=cc; fi/d' configure
+
 	epatch "${FILESDIR}"/${PN}-1.41.1-darwin-makefile.patch
 }
 
 src_configure() {
-	export LDCONFIG=${EPREFIX}/bin/true
-	export CC=$(tc-getCC)
-
 	# We want to use the "bsd" libraries while building on Darwin, but while
 	# building on other Gentoo/*BSD we prefer elf-naming scheme.
 	local libtype
@@ -41,31 +42,17 @@ src_configure() {
 	# directory too late
 	mkdir ./lib/blkid/pic ./lib/et/pic ./lib/ss/pic ./lib/uuid/pic 
 
+	ac_cv_path_LDCONFIG=: \
 	econf \
 		--enable-${libtype}-shlibs \
 		$(use_enable !elibc_uclibc tls) \
-		$(use_enable nls) \
-		|| die
-
-}
-
-src_compile() {
-	export LDCONFIG="${EPREFIX}"/bin/true
-	export CC=$(tc-getCC)
-	emake STRIP="${EPREFIX}"/bin/true || die
+		$(use_enable nls)
 }
 
 src_install() {
-	export LDCONFIG=${EPREFIX}/bin/true
-	export CC=$(tc-getCC)
+	emake STRIP=: DESTDIR="${D}" install || die
 
-	emake STRIP="${EPREFIX}"/bin/true DESTDIR="${D}" install || die
-
-	dodir /$(get_libdir)
-	local lib slib
-	for lib in "${ED}"/usr/$(get_libdir)/*.a ; do
-		slib=${lib##*/}
-		mv "${lib%.a}"*$(get_libname)* "${ED}"/$(get_libdir)/ || die "moving lib ${slib}"
-		gen_usr_ldscript ${slib%.a}$(get_libname)
-	done
+	set -- "${ED}"/usr/$(get_libdir)/*.a
+	set -- ${@/*\/lib}
+	gen_usr_ldscript -a "${@/.a}"
 }
