@@ -1,6 +1,12 @@
 # ChangeLog for sys-libs/e2fsprogs-libs
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.23 2009/03/15 05:01:39 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-libs/e2fsprogs-libs/ChangeLog,v 1.24 2009/05/29 23:26:49 vapier Exp $
+
+*e2fsprogs-libs-1.41.5 (29 May 2009)
+
+  29 May 2009; Mike Frysinger <vapier@gentoo.org>
+  +e2fsprogs-libs-1.41.5.ebuild:
+  Version bump #267402 by Paul Mulders.
 
   15 Mar 2009; Mike Frysinger <vapier@gentoo.org>
   e2fsprogs-libs-1.41.4.ebuild:
